@@ -3,7 +3,8 @@ macaroondir = $(pythondir)/macaroon/playback
 macaroon_PYTHON = \
 	__init__.py \
 	keypress_mimic.py \
-	playback_sequence.py
+	playback_sequence.py \
+	utils.py
 
 clean-local:
 	rm -rf *.pyc *.pyo
